Optimize setting data operations.
Setting local data on Chrome is not throttled, only debounce sync.
Don't make DBs save data on every page load, don't save cleaning operations if nothing's changed.
Debounce Unread.saveLastReadPost() on Chrome to every 5 seconds.

--- a/css/style.css
+++ b/css/style.css
@@ -787,6 +787,7 @@ a.hide-announcement {
   min-width: 100%;
   overflow: hidden;
   white-space: nowrap;
+  position: relative;
   -webkit-user-select: none;
   -moz-user-select: none;
   user-select: none;
