--- a/css/style.css
+++ b/css/style.css
@@ -495,6 +495,16 @@ a[href="javascript:;"] {
   overflow: hidden;
   text-align: center;
 }
+.thread-info {
+  position: fixed;
+  background: inherit;
+  padding: 2px;
+  border-radius: 2px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, .25);
+}
+.thread-info .post {
+  margin: 0;
+}
 
 /* Announcement Hiding */
 :root.hide-announcement #globalMessage,
