--- a/css/style.css
+++ b/css/style.css
@@ -497,7 +497,7 @@ a[href="javascript:;"] {
 }
 .thread-info {
   position: fixed;
-  background: inherit;
+  background-color: inherit;
   padding: 2px;
   border-radius: 2px;
   box-shadow: 0 0 5px rgba(0, 0, 0, .25);
