Remove last ad plea

--- a/src/General/css/layout.css
+++ b/src/General/css/layout.css
@@ -1857,7 +1857,8 @@ a:only-of-type > .remove {
 }
 /* Possibly temporary. Non-classed Ad Pleas only appear to be showing up in threads now? */
 .mobile + .mobile + .center,
-body > .center {
+body > .center,
+#delform > .center {
   display: none;
 }
 .ad-plea-middle,
