Add an option to hide navLink UI. #572

--- a/src/General/css/layout.css
+++ b/src/General/css/layout.css
@@ -2427,6 +2427,9 @@ article li {
 .btn-wrap {
   display: block;
 }
+.hide-navlinks body > .navLinks {
+  display: none;
+}
 .navLinks > .btn-wrap:not(:first-of-type)::before {
   content: ' - ';
 }
