--- a/src/General/css/layout.css
+++ b/src/General/css/layout.css
@@ -1069,6 +1069,10 @@ nav a,
 .expanding {
   opacity: .5;
 }
+.expanded-image > .post > .file > .fileThumb > img[data-md5],
+.post > .file > .fileThumb > .full-image {
+  display: none;
+}
 .expanded-image > .post > .file > .fileThumb > .full-image {
   display: block;
 }
