Hide Index UI in thread view.

--- a/src/General/css/style.css
+++ b/src/General/css/style.css
@@ -478,6 +478,7 @@ div.center:not(.ad-cnt) {
 }
 
 /* Index */
+:root.thread #index-menu,
 :root.index-loading .navLinks,
 :root.index-loading .board,
 :root.index-loading .pagelist {
