--- a/src/General/css/layout.css
+++ b/src/General/css/layout.css
@@ -2629,3 +2629,24 @@ article li {
 #exlinks-options-content {
   padding: 5px;
 }
+/* /f/ */
+[action*=/f/] .fileInfo {
+  padding-left: 5px;
+}
+.mobile.center {
+  display:none!important;
+}
+table.flashListing {
+  margin: auto !important;
+  border-spacing: 1px !important;
+}
+.flashListing td {
+  padding-left: 4px !important;
+  padding-right: 4px !important;
+  text-align: center !important;
+}
+#delform[action='https://sys.4chan.org/f/up.php'], #delform[action='https://sys.4chan.org/f/up.php'] .postblock {
+  background: none !important;
+  border: none !important;
+  box-shadow: none !important;
+}
