--- a/src/General/css/layout.css
+++ b/src/General/css/layout.css
@@ -2633,17 +2633,32 @@ article li {
 [action*='/f/'] .fileInfo {
   padding-left: 5px !important;
 }
+.name-col{
+  max-width: 200px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  word-wrap: break-word;
+}
+[action*='/f/'] .subject {
+  max-width: 200px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  word-wrap: break-word;
+}
 .mobile.center {
   display:none!important;
 }
 table.flashListing {
-  margin: auto !important;
   border-spacing: 1px !important;
+  padding-left: 5px !important;
 }
 .flashListing td {
-  padding-left: 4px !important;
-  padding-right: 4px !important;
+  padding: 2px !important;
+  font-size: 9pt !important;
   text-align: center !important;
+  margin: 0px !important;
 }
 #delform[action='https://sys.4chan.org/f/up.php'], #delform[action='https://sys.4chan.org/f/up.php'] .postblock {
   background: none !important;
