switch from .navLinks to .swfSauce on /f/
did this to not have it hide when ‘Hide Navlinks’ is enabled

--- a/src/General/css/layout.css
+++ b/src/General/css/layout.css
@@ -2640,7 +2640,7 @@ article li {
   white-space: nowrap;
   word-wrap: break-word;
 }
-div.navLinks.sauce {
+div.swfSauce {
   margin-top: 5px !important;
 }
 .mobile.center {
