No, that's why Oneechan themes wouldn't import Also, fix Vertical Icons causing stats to be in the wrong spot.

--- a/src/General/css/layout.css
+++ b/src/General/css/layout.css
@@ -541,6 +541,9 @@ nav a,
 #a-icons {
   <%= order %>: 10;
 }
+#a-stats {
+  height: 1.1em;
+}
 .sidebar-location-right #shortcuts {
   right: 0;
 }
