--- a/src/General/css/style.css
+++ b/src/General/css/style.css
@@ -801,7 +801,7 @@ span.hide-announcement {
 .qphl {
   outline: 2px solid rgba(216, 94, 49, .7);
 }
-:root.highlight-own .yourPost > .reply,
+:root.highlight-own .your-post > .reply,
 :root.highlight-you .quotesYou > .reply {
   border-left: 2px solid rgba(221,0,0,.5);
 }
