More magic happens to the tabbed slideup

--- a/src/General/css/layout.css
+++ b/src/General/css/layout.css
@@ -1648,7 +1648,7 @@ input:checked + .rice {
   cursor: default;
 }
 .post-form-style-tabbed-slideup #qrtab {
-  top: -14px !important;
+  top: -7% !important;
 }
 .post-form-style-tabbed-slideout.sidebar-location-left #qrtab {
   <%= transform %>: rotate(90deg);
