Revert "css fix"
This reverts commit 80b2eae41b62249f728bbdbdcacf649c2620e82b.

Conflicts:
	builds/4chan-X.user.js
	builds/crx/script.js
	src/General/css/style.css

--- a/src/General/css/style.css
+++ b/src/General/css/style.css
@@ -731,6 +731,9 @@ span.hide-announcement {
 :root.fit-width .full-image:not(#ihover) {
   max-width: 100%;
 }
+:root.gecko.fit-width .full-image {
+  width: 100%;
+}
 #ihover {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
