this should get width fitting working again
hopefully it doesn't break anything else

--- a/src/General/css/style.css
+++ b/src/General/css/style.css
@@ -719,7 +719,7 @@ span.hide-announcement {
 .full-image:not(#ihover) {
   display: none;
 }
-.expanded-image > .post > .file .full-image:not(#ihover) {
+.expanded-image > .post > .file > .fileThumb > .full-image:not(#ihover) {
   display: inline;
 }
 .expanding {
@@ -731,7 +731,7 @@ span.hide-announcement {
 :root.fit-width .full-image:not(#ihover) {
   max-width: 100%;
 }
-:root.gecko.fit-width .full-image {
+:root.gecko.fit-width .full-image:not(#ihover) {
   width: 100%;
 }
 #ihover {
